# esp32masterSPI_ads1298

components/eeprom/: CMakeLists.txt  eeprom.c
components/inputPin/: CMakeLists.txt  inputPin.c
components/master_spi/: CMakeLists.txt  Master_spi.c
components/master_spi/include/: Master_spi.h
components/outputPin/: CMakeLists.txt  outputPin.c
components/outputPin/include/: outputPin.h
main/: main.c
